--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 }
 
 main {
-    background-image: url("./Img_fundo.png");
+    background-image: url("./img/Img_fundo.png");
     height: 100vh;
     display: flex;
     align-items: center;
